# HadronsMILC

./: .gitignore  .gitmodules  AGENTS.md  Makefile.am  README  README.md  build.sh  configure.ac  configure.sh  deps.sh  main.cpp
src/: A2AVectors.hpp  DilutedNoise.hpp  EigenPack.hpp  Makefile.am  Modules.hpp  make_module_list.sh  moduleHelper.cpp  modules.inc
src/HadronsMILC/: A2AMatrix.hpp  A2AVectors.hpp  Makefile.am  Modules.cpp  Modules.hpp  modules.inc
src/Modules/MAction/: ImprovedStaggered.cpp  ImprovedStaggered5D.cpp
src/Modules/MContraction/: ASlashMesonField.hpp  Meson.cpp  Meson.hpp  MesonField.hpp  MesonField_old.cpp  MesonField_old.hpp
src/Modules/MFermion/: GaugeProp.cpp  GaugeProp.hpp  SpinTaste.hpp
src/Modules/MGauge/: StochEmFunc.cpp  StochEmFunc.hpp
src/Modules/MIO/: SaveVector.cpp  SaveVector.hpp
src/Modules/MNoise/: FullVolumeSpinColorDiagonal.cpp  FullVolumeSpinColorDiagonal.hpp  TimeDilutedSpinColorDiagonal.cpp  TimeDilutedSpinColorDiagonal.hpp
src/Modules/MSolver/: A2AVectors.hpp  ImplicitlyRestartedLanczos.hpp  LowModeProj.cpp  LowModeProj.hpp  LowModeProjFull.cpp  LowModeProjFull.hpp  MixedPrecisionCG.hpp  MixedPrecisionRBPrecCG.cpp  MixedPrecisionRBPrecCG.hpp  RBPrecCG.hpp
src/Modules/MSource/: RandomWall.hpp  SeqAslash.cpp  SeqAslash.hpp  SeqGamma.cpp  SeqGamma.hpp
src/a2a/: A2ATask.h  A2AView.h  A2AWorker.h  A2AWorker_old.h
src/spin/: StagGamma.h
utilities/python_scripts/: .gitignore  check_completed.py  config_check.py  contract.py  get_dict2xml.sh  hadrons_templates.py  hdf5_to_pickle.py  make_todo.py  process_corrs.py  processing_utils.py  processingutils.py  pyproject.toml  requirements.txt  setup.py  spawnjob.py  todo_utils.py
(+195 files in other folders)
