[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_scripts"
authors = [
    {name = "Michael Lynch", email = "michaellynch628@gmail.com"},
]
description = "Nanny, postprocessing, and A2A contraction scripts"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
keywords = []
license = {text = "MIT"}
classifiers = []
dependencies = [
    # Basically what `requirements.txt` would contain
]

[project.optional-dependencies]
# Can be used for development dependencies, for example
# tests = ["pytest>=6.0.0", "tox"]

[tool.setuptools.packages.find]
where = ["src"]